fix: fix z-index of burger button

--- a/english-for-kids-base/src/sass-components/burger-menu-button.scss
+++ b/english-for-kids-base/src/sass-components/burger-menu-button.scss
@@ -11,7 +11,7 @@
     
     cursor: pointer;
     transition: left .23s;
-    z-index: 10;
+    z-index: 5000;
     width: 35px;
     transform: translateZ(0);
     backface-visibility: hidden;
